[package]
name = "pyexpr-parser-cli"
version = "0.1.0"
edition = "2021"
about = "A CLI tool based on ruff-parser for parsing code"
license = "MIT"
repository = "https://github.com/BigOrangeQWQ/pyexpr-parser-cli"


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
# ruff = { git = "https://github.com/astral-sh/ruff", version = "0.9.3" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser", version = "0.0.0", subdir = "crates/ruff_python_parser" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast", version = "0.0.0", subdir = "crates/ruff_python_ast" }
serde_json = "1.0.137"
