[workspace]
members = ["crates/*"]
resolver = "2"



[workspace.package]
name = "pyexpr-parser"
version = "0.1.0"
edition = "2021"
about = "A tool based on ruff-parser for parsing code"
description = "A tool based on ruff-parser for parsing code"
license = "MIT"
authors = ["2284086963@qq.com"]
repository = "https://github.com/BigOrangeQWQ/pyexpr-parser-cli"
keywords = ["python", "parser", "cli"]



[workspace.dependencies]
parser_cli ={ path = "crates/parser_cli"}
parser_expr = { path = "crates/parser_expr"}
parser_wasm = { path = "crates/parser_wasm"}

# ruff
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser", version = "0.0.0", subdir = "crates/ruff_python_parser" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast", version = "0.0.0", subdir = "crates/ruff_python_ast" }

wasm-bindgen = {version = "0.2.92"}


[profile.release]
# 最高级别优化
opt-level = "z"          # 优化级别：z 最小体积，s 次之，3 最高性能
lto = "fat"              # 全链接时优化（极致性能+体积）
codegen-units = 1        # 单线程编译（最大化优化潜力）
panic = "abort"          # 禁用 panic 回溯（减少 panic 处理代码）
strip = true             # 移除调试符号（发布时必选）
incremental = false      # 关闭增量编译（提升优化稳定性）
